Fixed align for links

--- a/home.css
+++ b/home.css
@@ -63,11 +63,9 @@ ul {
   color: white;
   font-family: 'Trebuchet MS', sans-serif;
   font-size: 20px;
-  text-align: center;
 }
 .link ul{
   color: white;
   font-family: 'Trebuchet MS', sans-serif;
   font-size: 20px;
-  text-align: center;
 }
